--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ environment:
 dependencies:
   animate_do: ^3.0.2
   bloc: ^8.1.1
-  cupertino_icons: ^1.0.2
-  dio: ^5.0.0
-  dio_http2_adapter: ^2.1.0
+  cupertino_icons: ^1.0.5
+  dio: ^5.1.1
+  dio_http2_adapter: ^2.2.0
   equatable: ^2.0.5
-  firebase_core: ^2.4.1
-  firebase_messaging: ^14.2.1
+  firebase_core: ^2.10.0
+  firebase_messaging: ^14.4.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
@@ -44,16 +44,16 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_ringtone_player: ^3.2.0
-  flutter_secure_storage: ^7.0.1
+  flutter_secure_storage: ^8.0.0
   flutter_share: ^2.0.0
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.5
   geolocator: ^9.0.2
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.4
   http_parser: ^4.0.2
-  image_picker: ^0.8.6
-  intl: ^0.18.0
+  image_picker: ^0.8.7+4
+  intl: ^0.17.0
   intl_phone_field: ^3.1.0
-  map_launcher: ^2.4.0
+  map_launcher: ^2.5.0+1
   modal_bottom_sheet: ^2.1.2
   path_provider: ^2.0.12
   permission_handler: ^10.2.0
@@ -62,21 +62,21 @@ dependencies:
   qr_flutter: ^4.0.0
   scan: ^1.6.0
   screenshot: ^1.3.0
-  shared_preferences: ^2.0.15
-  socket_io_client: ^2.0.1
-  tutorial_coach_mark: ^1.2.6
-  url_launcher: ^6.1.7
+  shared_preferences: ^2.1.0
+  socket_io_client: ^2.0.2
+  tutorial_coach_mark: ^1.2.8
+  url_launcher: ^6.1.10
 
 dev_dependencies:
   flutter_launcher_icons: ^0.12.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-# dependency_overrides:
-#   modal_bottom_sheet:
-#     git:
-#       url: https://github.com/danReynolds/modal_bottom_sheet.git
-#       path: modal_bottom_sheet
+dependency_overrides:
+  modal_bottom_sheet:
+    git:
+      url: https://github.com/danReynolds/modal_bottom_sheet.git
+      path: modal_bottom_sheet
 flutter_icons:
   android: "launcher_icon"
   ios: true
