--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.6 <3.0.0"
+  sdk: '>=3.0.1 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,8 +35,9 @@ dependencies:
   dio: ^5.1.1
   dio_http2_adapter: ^2.2.0
   equatable: ^2.0.5
+  ff_native_screenshot: ^1.0.0
   firebase_core: ^2.10.0
-  firebase_messaging: ^14.4.1
+  firebase_messaging: ^14.6.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.2
@@ -51,7 +52,7 @@ dependencies:
   google_fonts: ^4.0.4
   http_parser: ^4.0.2
   image_picker: ^0.8.7+4
-  intl: ^0.17.0
+  intl: ^0.18.0
   intl_phone_field: ^3.1.0
   map_launcher: ^2.5.0+1
   modal_bottom_sheet: ^2.1.2
@@ -61,21 +62,24 @@ dependencies:
   provider: ^6.0.5
   qr_flutter: ^4.0.0
   scan: ^1.6.0
-  screenshot: ^1.3.0
   shared_preferences: ^2.1.0
-  socket_io_client: ^2.0.2
   tutorial_coach_mark: ^1.2.8
   url_launcher: ^6.1.10
 
 dev_dependencies:
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 dependency_overrides:
+  camera_android:
+    git:
+      url: https://github.com/MUTUAL-DE-SERVICIOS-AL-POLICIA/plugins-app
+      path: packages/camera/camera_android
+      ref: 5172b44088a4082ff0899594614c5380457d341b
   modal_bottom_sheet:
     git:
-      url: https://github.com/danReynolds/modal_bottom_sheet.git
+      url: https://github.com/MUTUAL-DE-SERVICIOS-AL-POLICIA/modal_bottom_sheet-app
       path: modal_bottom_sheet
 flutter_icons:
   android: "launcher_icon"
